# polaroid

./: .buildinfo  .gitignore  .readthedocs-custom-steps.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  rtd-requirements.txt  rustfmt.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml  wheels.yml
_modules/: index.html
_sources/api/: image.rst.txt  rgb.rst.txt
api/: image.html  index.html  rgb.html  rgba.html
docs/: conf.py  index.rst  install.rst
docs/api/: index.rst  rgba.rst
polaroid/: __init__.py  polaroid.pyi
src/: channels.rs  colorize.rs  conv.rs  drawing.rs  effects.rs  filters.rs  font.rs  gif.rs  image.rs  lib.rs  monochrome.rs  multiple.rs  noise.rs  rgb.rs  transformations.rs
tests/: benchmark.py  test_photon_py.py
user-test/: test.py
