[package]
name = "polaroid"
version = "0.2.7"
authors = ["Arnav Jindal <60603110+Daggy1234@users.noreply.github.com>"]
edition = "2018"
description="Hyper Fast and safe image manipulation library for python. Powered by rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version="0.12.3", features = ["extension-module"] }
photon-rs="0.2.0"
image="0.21.1"

[lib]
name = "polaroid"
crate-type = ["cdylib"]