[package]
name = "polaroid"
version = "0.3.2"
authors = ["Arnav Jindal <60603110+Daggy1234@users.noreply.github.com>"]
edition = "2018"
description="Hyper Fast and safe image manipulation library for python. Powered by rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version="0.13.0", features = ["extension-module"] }
photon-rs={git = "https://github.com/Daggy1234/photon"}
image="0.23.12"
imageproc="0.22.0"  
rusttype = "0.9.2"

[lib]
name = "polaroid"
crate-type = ["cdylib"]