[tool.poetry]
name = "polaroid"
version = "0.3.2"
description = "Hyper Fast and safe image manipulation for python. Powered by rust."
license="MIT"
authors = ["Arnav Jindal <60603110+Daggy1234@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
setuptools-rust = "^0.11.3"
Pillow = "^8.0.1"
Wand = "^0.6.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
